[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qovaris"
version = "0.2.0"
description = "The Security SDK for Autonomous AI Agents — an intent-verification firewall for agent tool calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Qovaris" }]
keywords = [
    "ai",
    "agents",
    "security",
    "firewall",
    "llm",
    "tool-calling",
    "prompt-injection",
    "langchain",
    "langgraph",
    "stripe",
    "mpp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# The core guard is intentionally dependency-free (standard library only) so it
# adds zero supply-chain surface to your agent.
dependencies = []

[project.optional-dependencies]
# Lightweight LangChain integrations (QovarisSecureTool, QovarisCallback).
langchain = ["langchain-core>=0.3.0"]
# Agent middleware (QovarisMiddleware) needs the v1 agents framework (Python >= 3.10).
middleware = ["langchain>=1.0; python_version >= '3.10'"]
# Everything needed to develop and test the SDK itself.
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.3.0",
    "langchain>=1.0; python_version >= '3.10'",
    # Pinned per LangChain guidance: new standard tests can break CI.
    "langchain-tests==1.1.9; python_version >= '3.10'",
    "langgraph>=0.2.0",
    "build>=1.0",
]

# uv-style groups matching the LangChain standard-tests docs:
#   uv run --group test pytest tests/unit_tests/
#   uv run --group test --group test_integration pytest tests/integration_tests/
[dependency-groups]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.3.0",
    "langchain-tests==1.1.9; python_version >= '3.10'",
]
test_integration = [
    "langchain>=1.0; python_version >= '3.10'",
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://qovaris.ai"
Documentation = "https://github.com/qovaris-ai/qovaris-guard#readme"
Repository = "https://github.com/qovaris-ai/qovaris-guard"
Issues = "https://github.com/qovaris-ai/qovaris-guard/issues"

[tool.setuptools.packages.find]
# The importable package lives next to this file as ``qovaris/``.
include = ["qovaris*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Make ``from qovaris import ...`` resolve without installing the package.
pythonpath = ["."]
# Required by langchain-tests' standard suite, which mixes sync + async tests.
asyncio_mode = "auto"
